--- a/style.css
+++ b/style.css
@@ -146,8 +146,12 @@ body {
 
 .hero-img {
 
-  max-height: 50vh;  /* image height = 80% of screen height */
+  max-height: 30vw;  /* image height = 80% of screen height */
   width: auto;
+  border: 2px solid rgb(131, 217, 251);
+  border-radius: 30px;
+  background-color: white;
+  object-fit: contain;
 }
 
 .text-higlight {
@@ -338,8 +342,8 @@ body {
 }
 
 .dl-main-profile img {
-  width: 280px;
-  height: 350px;
+  width: 300px;
+  height: 400px;
   object-fit: cover;
   border-radius: 20px;
   box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
@@ -870,12 +874,13 @@ body {
   border-radius: 50%;
   background: rgba(255, 255, 255, 0.2);
   border: 1px solid rgba(255, 255, 255, 0.3);
-  top: 50%;
+  top: 500px;
   transform: translateY(-50%);
 }
 
 .carousel-control-prev {
   left: -70px;
+  
 }
 
 .carousel-control-next {
@@ -1193,25 +1198,7 @@ body {
   overflow: hidden;
 }
 
-.::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: radial-gradient(
-      circle at 20% 20%,
-      rgba(59, 130, 246, 0.3) 0%,
-      transparent 50%
-    ),
-    radial-gradient(
-      circle at 80% 80%,
-      rgba(30, 58, 138, 0.3) 0%,
-      transparent 50%
-    );
-  pointer-events: none;
-}
+
 
 .testimonial-main-wrapper {
   display: flex;
@@ -1573,4 +1560,32 @@ background: linear-gradient(213deg, rgba(8, 8, 92, 1) 0%, rgba(9, 9, 121, 1) 35%
   background: #1976d2;
   transform: scale(1.08);
   opacity: 1;
+}
+
+@media (max-width: 600px) {
+  .dl-cta-button,
+  .apply-btn {
+    display: block;
+    align-items: center;
+    justify-content: center; 
+    text-align: center;
+    width: 100%;
+    font-size: 1rem;
+  }
+}
+
+.modal {
+  position: fixed;
+  z-index: 2000;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: auto;
+  background: rgba(0,0,0,0.4);
+  display: none;
+}
+.modal-dialog {
+  max-width: 400px;
+  margin: 5% auto;
 }
