--- a/style.css
+++ b/style.css
@@ -166,7 +166,9 @@ body {
         }
 
         .dl-btn-applys {
-           background: linear-gradient(135deg, #1e3a8a 0%, #3b82f6 50%, #1e40af 100%) !important;
+         background: #b3b3b3;
+background: linear-gradient(90deg, #00c6ff, #0072ff)
+ !important;
             color: white!important;
             border: none;
             padding: 15px 40px !important;
