--- a/style.css
+++ b/style.css
@@ -1434,13 +1434,15 @@ body {
   transform: translateY(-2px);
 }
 
+
+
 .vendor-logo {
-  border-radius: 8px;
-  display: flex;
-  padding: 2px;
-  width:150px;
-  height:50px;
-  border-radius:8px;
+  width: 120px;       /* fixed width for all */
+  height: auto;      /* fixed height for all */
+  object-fit: contain; /* keep aspect ratio */
+  background: #fff;   /* optional: to give white box */
+         /* some spacing */
+
 }
 
 
